--- a/index.html
+++ b/index.html
@@ -5334,9 +5334,11 @@ body.modal-open{
   padding-top: 0px !important;
 }
 
-#teamTurnScreen .turn-title{
-  margin-top: -1px;
+#teamTurnScreen .turn-title-img{
+  margin-top: -35px;
+  margin-bottom: -60px;
 }
+
 
 
 /* =========================================
